/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */

syntax = "proto3";

package messages.behaviour;

import "messages/Vector.proto";
import "messages/Transform.proto";

message MotionCommand {

    message StandStill {
    }

    message WalkToState {
        Transform2D goal_state = 1;
    }

    message BallApproach {
        vec2 kick_target = 1;
    }

    message DirectCommand {
        Transform2D walk_command = 1;
    }

    oneof command {
        StandStill stand_stil = 1;
        WalkToState walk_to_state = 2;
        BallApproach ball_approach = 3;
        DirectCommand direct_command = 4;
    }
}
