/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */

syntax = "proto3";

package messages.behaviour;

import "messages/Transform.proto";
import "messages/behaviour/MotionCommand.proto";

message WalkPath {

    // Sequence of robot states that form a path:
    repeated Transform2D states = 1;

    // The ball position and target bearing at the time of planning:
    Transform2D ball_space = 2;

    // The start and goal states used for planning:
    Transform2D start = 3;
    Transform2D goal = 4;

    // The motion command for which this plan was generated:
    MotionCommand command = 5;
}
